force-app/main/default/objects/monster_com_for__c/monster_com_for__c.object-meta.xml
<CustomObject>
    <label>monster.com jobform</label>
    <nameField>
        <displayFormat>A-{00}</displayFormat>
        <label>SL num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>monster.com jobforms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>