force-app/main/default/objects/monster_com_for__c/fields/Lan__c.field-meta.xml
<CustomField>
    <fullName>Lan__c</fullName>
    <label>Language</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>C+</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Apax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>