force-app/main/default/objects/monster_com_for__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>shekhar told to creeat</description>
    <inlineHelpText>Pls enter candidate name</inlineHelpText>
    <label>first name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>