force-app/main/default/objects/monster_com_for__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <length>250</length>
    <type>Text</type>
</CustomField>